# presentation-CMake-CTest

./: .gitignore  CMake, Ctest et les systèmes de construction.pptx
exemple1/: CMakeLists.txt  add_one.c  add_two.c  main.c  test_add_one.c  test_add_two.c
